# lichess-tools

./: README.md  pyproject.toml
src/lichess_tools/: config.py  exceptions.py  filters.py  main.py
src/lichess_tools/analysis/: base.py  cloud.py  pgn.py
src/lichess_tools/api/: accounts.py  client.py  games.py  studies.py
src/lichess_tools/commands/: _utils.py  accounts_cmd.py  config_cmd.py  games_cmd.py  studies_cmd.py
src/lichess_tools/db/: migrations.py  repository.py  schema.py
